<resources>
    <string name="app_name">Contacts</string>
    <string name="add_user">Add User</string>
    <string name="search">Search</string>
    <string name="recent">Recents</string>

    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="view_all">View all</string>

    <string name="call">Call</string>
    <string name="massage">Massage</string>

    <string name="frag">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus animi aperiam aspernatur blanditiis corporis debitis dolore dolorum eos fuga maiores minus, molestias natus, pariatur repudiandae tempore voluptates! Amet, minus.
    </string>
    <string name="jack">Jack</string>
    <string name="blue">Blue</string>
    <string name="_12_mins_ago">12 mins ago</string>
</resources>